--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,115 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/result"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="15dp"
+        android:inputType="none"
+        android:minHeight="60dp"
+        android:text="0"
+        android:textAlignment="textEnd"
+        app:layout_constraintBottom_toTopOf="@+id/buttonGrid"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <GridLayout
+        android:id="@+id/buttonGrid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:columnCount="4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/result"
+        app:layout_constraintVertical_bias="1.0">
+
+        <Button
+            android:id="@+id/button_CE"
+            style="@style/button_styles"
+            android:text="CE" />
+
+        <Button
+            android:id="@+id/button_C"
+            style="@style/button_styles"
+            android:text="C" />
+
+        <Button
+            android:id="@+id/button_BS"
+            style="@style/button_styles"
+            android:text="BS" />
+
+        <Button
+            android:id="@+id/button_chia"
+            style="@style/button_styles"
+            android:text="/" />
+
+        <Button
+            style="@style/button_styles"
+            android:text="7" />
+
+        <Button
+            style="@style/button_styles"
+            android:text="8" />
+
+        <Button
+            style="@style/button_styles"
+            android:text="9" />
+
+        <Button
+            style="@style/button_styles"
+            android:text="x" />
+
+        <Button
+            style="@style/button_styles"
+            android:text="4" />
+
+        <Button
+            style="@style/button_styles"
+            android:text="5" />
+
+        <Button
+            style="@style/button_styles"
+            android:text="6" />
+
+        <Button
+            style="@style/button_styles"
+            android:text="-" />
+
+        <Button
+            style="@style/button_styles"
+            android:text="1" />
+
+        <Button
+            style="@style/button_styles"
+            android:text="2" />
+
+        <Button
+            style="@style/button_styles"
+            android:text="3" />
+
+        <Button
+            style="@style/button_styles"
+            android:text="+" />
+
+        <Button
+            style="@style/button_styles"
+            android:text="+/-" />
+
+        <Button
+            style="@style/button_styles"
+            android:text="0" />
+
+        <Button
+            style="@style/button_styles"
+            android:text="." />
+
+        <Button
+            android:id="@+id/button_equals"
+            style="@style/button_styles"
+            android:text="=" />
+
+    </GridLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
